# test_task_django-celery

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
src/: db.sqlite3  urls.py
src/app/: apps.py  exceptions.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
src/app/migrations/: 0001_initial.py
src/app/tasks/: __init__.py  payout_task.py  sanity_task.py
src/app/tests/: conftest.py  test_app.py
src/core/: asgi.py  celery.py  settings.py  wsgi.py
